--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,7 +5,9 @@
    "id": "29d222ac",
    "metadata": {},
    "source": [
-    "# Julemanden har brug for din hjælp!"
+    "# Julemandens workshop\n",
+    "\n",
+    "Annotér nogle billeder og træn en model, så vi automatisk kan finde ud af, hvilke af de mange millioner gaver, vi stadig kan bruge efter indbruddet."
    ]
   },
   {
@@ -13,7 +15,17 @@
    "id": "329bfb4b",
    "metadata": {},
    "source": [
-    "## Boilerplate"
+    "## Opstart\n",
+    "\n",
+    "Det her dokument er en \"Notebook\".  \n",
+    "Notebook'en består af celler med kode i. \n",
+    "* Du kan aktivere en celle ved at trykke inde i cellen\n",
+    "* DU kan køre en celle ved at aktivere den og trykke \"shift + enter\"\n",
+    "\n",
+    "Vi skal bruge de nedenstående celler.  \n",
+    "Aktiver den første celle herunder og tryk \"shift + enter\".  \n",
+    "Cellen går automatisk videre til den næste celle.  \n",
+    "Tryk \"shift + enter\" igen for også at køre den."
    ]
   },
   {
@@ -27,8 +39,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%pip install -q pytorch_lightning einops\n",
-    "# TODO: more dependencies below. Move to requirements.txt"
+    "%pip install -q requirements.txt"
    ]
   },
   {
@@ -40,43 +51,25 @@
    },
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "import albumentations as A\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "\n",
-    "import config\n",
     "import utils\n",
-    "from annoterer import Annoterer\n",
-    "from training import træn_model\n",
-    "from data import GaveDatasæt"
+    "import annoterer\n",
+    "import træning"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7611b373",
+   "id": "8f2c4625",
    "metadata": {},
    "source": [
-    "## Den er gal i julemandens værksted!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "337e5403",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(1, 2, figsize=(8, 4))\n",
-    "axs[0].imshow(Image.open('images_448/217ca0a5-3648-441e-9577-eaee74a27937.jpg'))\n",
-    "axs[0].set_title('ok')\n",
-    "axs[1].imshow(Image.open('images_448/f605b583-3523-469a-a9ef-e3306d4f1232.jpg'))\n",
-    "axs[1].set_title('ikke ok')\n",
-    "for ax in axs:\n",
-    "    ax.axis('off')\n",
-    "plt.tight_layout()"
+    "## Annoter Billeder\n",
+    "\n",
+    "Der er 500 billeder, du kan annotere, men start med 200.  \n",
+    "Vi bruger 100 billeder til vores valideringssæt, så med 200 billeder totalt er der 100 billeder til træning.  \n",
+    "Du kan altid komme tilbage og annotere flere ved at sætte \"antal_billeder\" op og køre cellen igen.\n",
+    "Hvis du f.eks. annoterer 300 billeder, er der 200 til træning. \n",
+    "\n",
+    "Start med at køre cellen herunder og annotér 200 billeder:"
    ]
   },
   {
@@ -88,28 +81,23 @@
    },
    "outputs": [],
    "source": [
-    "annoterer = Annoterer(\n",
-    "    debug=True,\n",
-    ")\n",
-    "display(annoterer.widget)"
+    "annoterer.annoter(antal_billeder=200)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2307215",
+   "cell_type": "markdown",
+   "id": "de1d1258",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "img_fps = list(config.images_folder.glob('*.jpg'))\n",
-    "img_fps = np.random.choice(img_fps, 20, replace=False)\n",
-    "images = [Image.open(fp) for fp in img_fps]\n",
+    "## Billedeaugmenteringer\n",
     "\n",
-    "fig, axs = plt.subplots(2, 5, figsize=(10, 4))\n",
-    "for ax, img in zip(axs.reshape(-1), images):\n",
-    "    ax.imshow(img)\n",
-    "    ax.axis('off')\n",
-    "plt.tight_layout(pad=0.5)"
+    "Med billedeaugmentering laver vi ændringer i billederne i vores træningsdata, uden at billedets label ændrer sig.  \n",
+    "På den måde får vi mere data at træne på uden at skulle annotere flere billeder.\n",
+    "\n",
+    "Til at starte med kan du prøve uden annoteringer, men prøv at kom tilbage hertil, hvis du har problemer med overfitting.\n",
+    "\n",
+    "Du kan køre den nedenstående celle for at se, hvordan billederne ser ud med forskellige augmenteringer.  \n",
+    "Prøv f.eks. at fjerne \"#\" i en af linjerne i cellen herunder og kør cellen igen:"
    ]
   },
   {
@@ -119,29 +107,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vis eksempler fra det datasæt, vi vil træne vores model på:\n",
     "augmenteringer = [\n",
     "    #A.RandomResizedCrop(224, 224, scale=(0.5, 1)),\n",
-    "    #A.ColorJitter(),    \n",
+    "    #A.ColorJitter(),   \n",
+    "    #A.RandomRotate90(),\n",
+    "    #A.Flip(),\n",
     "]\n",
-    "\n",
-    "dataset = GaveDatasæt(utils.load_annotations(), augs=augmenteringer)\n",
-    "fig, axs = plt.subplots(2, 5, figsize=(12, 5))\n",
-    "idxs = np.random.permutation(len(dataset))\n",
-    "for i, ax in zip(idxs, axs.reshape(-1)):\n",
-    "    img, ok = dataset[i]\n",
-    "    ax.imshow(Image.fromarray(dataset.denormalize(img)))\n",
-    "    ax.axis('off')\n",
-    "    ax.set_title('ok' if ok else 'ikke ok')\n"
+    "utils.vis_augmenteringseksempler(augmenteringer)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d090d41",
+   "cell_type": "markdown",
+   "id": "15f0d9a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Træn en model\n",
+    "\n",
+    "Kør den nedenstående celle for at træne din første model."
+   ]
   },
   {
    "cell_type": "code",
@@ -150,20 +133,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, version = træn_model(\n",
-    "    epochs=20, lr=1e-4, \n",
+    "model, version = træning.træn_model(\n",
+    "    epoker=20, \n",
     "    start_fra_prætrænede_vægte=False,\n",
-    "    frys_backbone=False,\n",
-    "    augmenteringer=[], \n",
-    "    n_train=100, n_val=100,\n",
+    "    augmenteringer=[],\n",
+    "    antal_træningsbilleder=100,\n",
+    "    model_størrelse='lille',\n",
     ")\n",
-    "plot_log(version)"
+    "utils.plot_log(version)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3653100",
+   "metadata": {},
+   "source": [
+    "Din model ser ud til at virke godt på dit træningsdata, men ikke særlig godt på dit valideringdata - et klart tegn på overfitting!  \n",
+    "Hvis vi skal bruge modellen til at hjælpe med de mange millioner af gaver, er det vigtigt, at modellen også virker på data, modellen ikke er trænet på!\n",
+    "\n",
+    "Her er nogle ting, du kan eksperimentere med for at opnå en bedre model:\n",
+    "\n",
+    "* Prøv at starte fra en model, der er trænet på et andet på problem med mange flere billeder (sæt \"start_fra_prætrænede_vægte\" til \"True\")\n",
+    "* Prøv at eksperimentér med data augmenteringer. (Du kan se eksempler på augmenteringer i en celle lidt højere oppe i dokumentet).\n",
+    "* Prøv at annotere nogle flere billeder og sæt \"antal_træningsbilleder\" op.\n",
+    "* Prøv forskellige modelstørrelser: \"lille\", \"mellem\" eller \"stor\".\n",
+    "\n",
+    "Du kan enten ændre direkte i cellen ovenover eller kopiere cellen til nye celler herunder, og køre dem."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c382e7b7",
+   "id": "14095bd5",
    "metadata": {},
    "outputs": [],
    "source": []
